--- a/tests/fixtures/html/00288-vor-section-acknowledgements.html
+++ b/tests/fixtures/html/00288-vor-section-acknowledgements.html
@@ -1,1 +1,1 @@
-<p id="p-171">We express gratitude to our study participants, to Varsha Dhankani and Laura Matrajt for careful review of the manuscript, and to Mindy Miner for technical editing.</p>
+<p>We express gratitude to our study participants, to Varsha Dhankani and Laura Matrajt for careful review of the manuscript, and to Mindy Miner for technical editing.</p>
