Amend expected output for decision letter

--- a/tests/fixtures/html/00288-vor-section-decision-letter.html
+++ b/tests/fixtures/html/00288-vor-section-decision-letter.html
@@ -1,6 +1,6 @@
 <div class="elife-article-editors">
     <div class="elife-article-decision-reviewingeditor">
-        <span class="nlm-given-names">Sema</span> <span class="nlm-surname">Sgaier</span>, <span class="nlm-role">Reviewing editor</span>, <span class="nlm-institution" data-hwp-id="institution-11">Bill &amp; Melinda Gates Foundation</span>, <span class="nlm-country">India</span>
+        <span class="nlm-given-names">Sema</span> <span class="nlm-surname">Sgaier</span>, <span class="nlm-role">Reviewing editor</span>, <span class="nlm-institution">Bill &amp; Melinda Gates Foundation</span>, <span class="nlm-country">India</span>
     </div>
 </div>
 
