Cleanup test cases

--- a/tests/fixtures/html/00288-vor-eLife.00288.026-doi-fig.html
+++ b/tests/fixtures/html/00288-vor-eLife.00288.026-doi-fig.html
@@ -1,4 +1,4 @@
-<div id="F13" class="fig-inline-img-set">
+<div id="fig5" class="fig-inline-img-set">
 	<div class="elife-fig-image-caption-wrapper">
         <div class="fig-expansion">
             <div class="fig-inline-img">
