--- a/tests/fixtures/html/00288-vor-eLife.00288.022-doi-supplementary-material.html
+++ b/tests/fixtures/html/00288-vor-eLife.00288.022-doi-supplementary-material.html
@@ -1,3 +1,3 @@
-<div class="supplementary-material-expansion" id="DC3">
+<div class="supplementary-material-expansion" id="SD3-data">
 	<span class="supplementary-material-label">Figure 4—source data 1.</span><p>Source data for Figure 4.</p><p><strong>DOI:</strong> <a href="/lookup/doi/10.7554/eLife.00288.022">http://dx.doi.org/10.7554/eLife.00288.022</a></p><span class="inline-linked-media-wrapper"><a href="[media-elife00288s003-download]"><i class="icon-download-alt"></i> Download source data<span class="inline-linked-media-filename">[figure-4—source-data-1.media-3.xlsx]</span></a></span>
 </div>
