Fix broken years

--- a/tests/fixtures/html/00288-vor-section-references.html
+++ b/tests/fixtures/html/00288-vor-section-references.html
@@ -391,7 +391,7 @@
                 <span class="elife-reflink-details-journal"><span class="nlm-source">J Virol</span></span>,
                 <span class="elife-reflink-details-volume">81</span>,
                 <span class="elife-reflink-details-pages">3495-502</span>,
-                <span class="elife-reflink-details-year">2015</span>
+                <span class="elife-reflink-details-year">2007a</span>
                 <div class="elife-reflink-doi-cited-wrapper">
                     <span class="elife-reflink-details-doi"><a href="http://dx.doi.org/10.1128/JVI.02359-06">http://dx.doi.org/10.1128/JVI.02359-06</a></span>
                 </div>
@@ -421,7 +421,7 @@
                 <span class="elife-reflink-details-journal"><span class="nlm-source">J Virol</span></span>,
                 <span class="elife-reflink-details-volume">81</span>,
                 <span class="elife-reflink-details-pages">12077-9</span>,
-                <span class="elife-reflink-details-year">2015</span>
+                <span class="elife-reflink-details-year">2007b</span>
                 <div class="elife-reflink-doi-cited-wrapper">
                     <span class="elife-reflink-details-doi"><a href="http://dx.doi.org/10.1128/JVI.01133-07">http://dx.doi.org/10.1128/JVI.01133-07</a></span>
                 </div>
@@ -773,7 +773,7 @@
                 <span class="elife-reflink-details-journal"><span class="nlm-source">J Antimicrob Chemother</span></span>,
                 <span class="elife-reflink-details-volume">66</span>,
                 <span class="elife-reflink-details-pages">2593-600</span>,
-                <span class="elife-reflink-details-year">2015</span>
+                <span class="elife-reflink-details-year">2011a</span>
                 <div class="elife-reflink-doi-cited-wrapper">
                     <span class="elife-reflink-details-doi"><a href="http://dx.doi.org/10.1093/jac/dkr346">http://dx.doi.org/10.1093/jac/dkr346</a></span>
                 </div>
@@ -803,7 +803,7 @@
                 <span class="elife-reflink-details-journal"><span class="nlm-source">J Infect Dis</span></span>,
                 <span class="elife-reflink-details-volume">204</span>,
                 <span class="elife-reflink-details-pages">554-61</span>,
-                <span class="elife-reflink-details-year">2015</span>
+                <span class="elife-reflink-details-year">2011b</span>
                 <div class="elife-reflink-doi-cited-wrapper">
                     <span class="elife-reflink-details-doi"><a href="http://dx.doi.org/10.1093/infdis/jir314">http://dx.doi.org/10.1093/infdis/jir314</a></span>
                 </div>
