Use id supplied in xml for table-wrap

--- a/tests/fixtures/html/00288-vor-eLife.00288.003-doi-table-wrap.html
+++ b/tests/fixtures/html/00288-vor-eLife.00288.003-doi-table-wrap.html
@@ -1,4 +1,4 @@
-<div class="table-expansion" id="T1">
+<div class="table-expansion" id="tbl1">
 	<div class="table-caption">
 		<span class="table-label">Table 1.</span> <p>Five cohorts of HSV-2 genital tract shedding</p><p><strong>DOI:</strong> <a href="/lookup/doi/10.7554/eLife.00288.003">http://dx.doi.org/10.7554/eLife.00288.003</a></p>
 		<div class="sb-div caption-clear"></div>
