Remove rogue 'et al.'

--- a/tests/fixtures/html/00288-vor-section-references.html
+++ b/tests/fixtures/html/00288-vor-section-references.html
@@ -654,7 +654,7 @@
                 <span class="nlm-article-title">Herpes simplex viruses and their replication</span>
             </cite>
             <div class="elife-reflink-authors">
-                <span class="elife-reflink-author"><a href="http://scholar.google.com/scholar?q=&quot;author:BKD Roizman&quot;">BKD Roizman</a></span> et al.
+                <span class="elife-reflink-author"><a href="http://scholar.google.com/scholar?q=&quot;author:BKD Roizman&quot;">BKD Roizman</a></span>
             </div>
             <div class="elife-reflink-details">
                 <span class="elife-reflink-details-journal"><span class="nlm-source">Fields Virology</span></span>,
