Cleanup subsection test case

--- a/tests/fixtures/html/00288-vor-s2-6-id-subsection.html
+++ b/tests/fixtures/html/00288-vor-s2-6-id-subsection.html
@@ -3,7 +3,8 @@
 <p>We simulated the model until 100 episodes with &gt;10,000 total infected cells within one ulcer were generated. Number of infected cells and viral load peaked at a median of 13.5 hr, predicting the finding from Cohort C that transition from expansion to clearance occurs ∼12 hr after episode commencement. To explain episodes of &gt;4 days, the model predicted multiple peaks within single episodes. In addition, prolonged simulated episodes had wide concurrent dispersal of virus (<a class="xref-other" href="#video1">Video 1</a>).</p>
 <div class="media video-content" id="video1">
     <div class="media-inline video-inline">
-        <div class="elife-inline-video">[video-video1-inline]
+        <div class="elife-inline-video">
+            [video-video1-inline]
             <div class="elife-video-links">
                 <span class="elife-video-link elife-video-link-download"><a href="[video-video1-download]">Download Video</a></span>
             </div>
