Add jumpto links to carousel thumbnails

--- a/tests/fixtures/html/00288-vor-eLife.00288.007-doi-fig-group.html
+++ b/tests/fixtures/html/00288-vor-eLife.00288.007-doi-fig-group.html
@@ -2,18 +2,18 @@
     <div class="elife-fig-slider-wrapper">
         <div class="elife-fig-slider">
             <div class="elife-fig-slider-img elife-fig-slider-primary">
-                <img src="[graphic-elife00288f001-small]" alt="Figure 1."/>
+                <a href="#fig1"><img src="[graphic-elife00288f001-small]" alt="Figure 1."/></a>
             </div>
             <div class="figure-carousel-inner-wrapper">
                 <div class="figure-carousel">
                     <div class="elife-fig-slider-img elife-fig-slider-secondary">
-                        <img src="[graphic-elife00288fs001-small]" alt="Figure 1—figure supplement 1."/>
+                        <a href="#fig1s1"><img src="[graphic-elife00288fs001-small]" alt="Figure 1—figure supplement 1."/></a>
                     </div>
                     <div class="elife-fig-slider-img elife-fig-slider-secondary">
-                        <img src="[graphic-elife00288fs002-small]" alt="Figure 1—figure supplement 2."/>
+                        <a href="#fig1s2"><img src="[graphic-elife00288fs002-small]" alt="Figure 1—figure supplement 2."/></a>
                     </div>
                     <div class="elife-fig-slider-img elife-fig-slider-secondary">
-                        <img src="[graphic-elife00288fs003-small]" alt="Figure 1—figure supplement 3."/>
+                        <a href="#fig1s3"><img src="[graphic-elife00288fs003-small]" alt="Figure 1—figure supplement 3."/></a>
                     </div>
                 </div>
             </div>
