Remove redundant class to improve figure markup

--- a/tests/fixtures/html/00288-vor-eLife.00288.007-doi-fig-group.html
+++ b/tests/fixtures/html/00288-vor-eLife.00288.007-doi-fig-group.html
@@ -1,4 +1,4 @@
-<div class="fig-inline-img-set fig-inline-img-set-carousel">
+<div class="fig-inline-img-set-carousel">
     <div class="elife-fig-slider-wrapper">
         <div class="elife-fig-slider">
             <div class="elife-fig-slider-img elife-fig-slider-primary">
