Improve markup to allow downloads to be triggered

--- a/tests/fixtures/html/00288-v1-vor-eLife.00288.034-doi-media.html
+++ b/tests/fixtures/html/00288-v1-vor-eLife.00288.034-doi-media.html
@@ -3,7 +3,7 @@
 		<div class="elife-inline-video">
 			[video-video8-inline]
 			<div class="elife-video-links"><span class="elife-video-link elife-video-link-download">
-				<a href="[video-video8-download]">Download Video</a></span>
+				<a href="[video-video8-download]" download>Download Video</a></span>
 			</div>
 		</div>
 	</div>
