--- a/tests/fixtures/html/00288-v1-vor-s2-6-id-subsection.html
+++ b/tests/fixtures/html/00288-v1-vor-s2-6-id-subsection.html
@@ -6,7 +6,7 @@
         <div class="elife-inline-video">
             [video-video1-inline]
             <div class="elife-video-links">
-                <span class="elife-video-link elife-video-link-download"><a href="[video-video1-download]">Download Video</a></span>
+                <span class="elife-video-link elife-video-link-download"><a href="[video-video1-download]" download>Download Video</a></span>
             </div>
         </div>
     </div>
