--- a/tests/fixtures/html/00288-v1-vor-section-article-info-license.html
+++ b/tests/fixtures/html/00288-v1-vor-section-article-info-license.html
@@ -2,5 +2,5 @@
     <li>© 2013, Schiffer et al</li>
 </ul>
 <div class="license">
-    <p>This article is distributed under the terms of the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution License</a>, which permits unrestricted use and redistribution provided that the original author and source are credited.</p>
+    <p>This article is distributed under the terms of the <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution License</a>, which permits unrestricted use and redistribution provided that the original author and source are credited.</p>
 </div>
