--- a/tests/fixtures/html/00731-v1-vor-section-author-info-equal-contrib.html
+++ b/tests/fixtures/html/00731-v1-vor-section-author-info-equal-contrib.html
@@ -1,2 +1,1 @@
-<h4 class="equal-contrib-label">These authors contributed equally to this work</h4>
-<p>Kentaro Yoshida, Verena J Schuenemann</p>
+<section class="equal-contrib"><h4 class="equal-contrib-label">These authors contributed equally to this work</h4><ul class="equal-contrib-list"><li>Kentaro Yoshida</li><li>Verena J Schuenemann</li></ul></section>
