--- a/tests/fixtures/html/03665-v1-vor-section-author-info-funding.html
+++ b/tests/fixtures/html/03665-v1-vor-section-author-info-funding.html
@@ -1,1 +1,4 @@
-<ul class="funding-group"><li><span class="funding-source"><span class="institution">Medical Research Council</span></span><span class="award-id">MC_UP_A025_1012</span><span class="principal-award-recipient"><span class="name">Sjors HW Scheres</span></span></li></ul><p class="funding-statement">The funder had no role in study design, data collection and interpretation, or the decision to submit the work for publication.</p>
+<ul class="funding-group">
+  <li><h4 class="funding-source"><span class="institution">Medical Research Council</span></h4><h5 class="award-id">MC_UP_A025_1012</h5><ul class="principal-award-recipient"><li class="name">Sjors HW Scheres</li></ul></li>
+</ul>
+<p class="funding-statement">The funder had no role in study design, data collection and interpretation, or the decision to submit the work for publication.</p>
