Update article info identification markup

--- a/tests/fixtures/html/00288-v1-vor-section-article-info-identification.html
+++ b/tests/fixtures/html/00288-v1-vor-section-article-info-identification.html
@@ -1,6 +1,6 @@
 <div class="elife-article-info-doi">
-    <span class="info-label">DOI</span> <span class="info-content"><a href="/lookup/doi/10.7554/eLife.00288">10.7554/eLife.00288</a></span>
+    <h4 class="info-label">DOI</h4> <div class="info-content"><a href="/lookup/doi/10.7554/eLife.00288">10.7554/eLife.00288</a></div>
 </div>
 <div class="elife-article-info-citeas">
-    <span class="info-label">Cite this as</span> <span class="info-content">eLife 2013;2:e00288</span>
+    <h4 class="info-label">Cite this as</h4> <div class="info-content">eLife 2013;2:e00288</div>
 </div>
