--- a/tests/fixtures/html/04493-v1-poa-section-supplementary-material.html
+++ b/tests/fixtures/html/04493-v1-poa-section-supplementary-material.html
@@ -1,5 +1,5 @@
 <ul class="supplementary-material">
-    <li><a href="[elife-04493-supp-v1.zip]">Download zip of figure supplements and supplementary file</a> (Any figures and tables for this article are included in the PDF. The zip folder contains additional supplemental files.)</li>
+    <li><a href="[elife-04493-supp-v1.zip]">Download zip of figure supplements and supplementary file</a><p>Any figures and tables for this article are included in the PDF. The zip folder contains additional supplemental files.</p></li>
     <li><a href="[Video_2.zip]">Download zip of Video 2</a></li>
     <li><a href="[Video_8.zip]">Download zip of Video 8</a></li>
     <li><a href="[Video_6.zip]">Download zip of Video 6</a></li>
