Add download attribute to supplementary material link

--- a/tests/fixtures/html/04493-v1-poa-section-supplementary-material.html
+++ b/tests/fixtures/html/04493-v1-poa-section-supplementary-material.html
@@ -1,25 +1,25 @@
 <ul class="supplementary-material">
-    <li><a href="[elife-04493-supp-v1.zip]">Download zip of figure supplements and supplementary file</a><p>Any figures and tables for this article are included in the PDF. The zip folder contains additional supplemental files.</p></li>
-    <li><a href="[Video_2.zip]">Download zip of Video 2</a></li>
-    <li><a href="[Video_8.zip]">Download zip of Video 8</a></li>
-    <li><a href="[Video_6.zip]">Download zip of Video 6</a></li>
-    <li><a href="[Video_11.zip]">Download zip of Video 11</a></li>
-    <li><a href="[Video_17.zip]">Download zip of Video 17</a></li>
-    <li><a href="[Video_18.zip]">Download zip of Video 18</a></li>
-    <li><a href="[Video_7.zip]">Download zip of Video 7</a></li>
-    <li><a href="[Video_10.zip]">Download zip of Video 10</a></li>
-    <li><a href="[Video_5.zip]">Download zip of Video 5</a></li>
-    <li><a href="[Video_13.zip]">Download zip of Video 13</a></li>
-    <li><a href="[Video_19.zip]">Download zip of Video 19</a></li>
-    <li><a href="[Video_15.zip]">Download zip of Video 15</a></li>
-    <li><a href="[Video_21.zip]">Download zip of Video 21</a></li>
-    <li><a href="[Video_22.zip]">Download zip of Video 22</a></li>
-    <li><a href="[Video_4.zip]">Download zip of Video 4</a></li>
-    <li><a href="[Video_20.zip]">Download zip of Video 20</a></li>
-    <li><a href="[Video_12.zip]">Download zip of Video 12</a></li>
-    <li><a href="[Video_1.zip]">Download zip of Video 1</a></li>
-    <li><a href="[Video_16.zip]">Download zip of Video 16</a></li>
-    <li><a href="[Video_3.zip]">Download zip of Video 3</a></li>
-    <li><a href="[Video_9.zip]">Download zip of Video 9</a></li>
-    <li><a href="[Video_14.zip]">Download zip of Video 14</a></li>
+    <li><a href="[elife-04493-supp-v1.zip]" download>Download zip of figure supplements and supplementary file</a><p>Any figures and tables for this article are included in the PDF. The zip folder contains additional supplemental files.</p></li>
+    <li><a href="[Video_2.zip]" download>Download zip of Video 2</a></li>
+    <li><a href="[Video_8.zip]" download>Download zip of Video 8</a></li>
+    <li><a href="[Video_6.zip]" download>Download zip of Video 6</a></li>
+    <li><a href="[Video_11.zip]" download>Download zip of Video 11</a></li>
+    <li><a href="[Video_17.zip]" download>Download zip of Video 17</a></li>
+    <li><a href="[Video_18.zip]" download>Download zip of Video 18</a></li>
+    <li><a href="[Video_7.zip]" download>Download zip of Video 7</a></li>
+    <li><a href="[Video_10.zip]" download>Download zip of Video 10</a></li>
+    <li><a href="[Video_5.zip]" download>Download zip of Video 5</a></li>
+    <li><a href="[Video_13.zip]" download>Download zip of Video 13</a></li>
+    <li><a href="[Video_19.zip]" download>Download zip of Video 19</a></li>
+    <li><a href="[Video_15.zip]" download>Download zip of Video 15</a></li>
+    <li><a href="[Video_21.zip]" download>Download zip of Video 21</a></li>
+    <li><a href="[Video_22.zip]" download>Download zip of Video 22</a></li>
+    <li><a href="[Video_4.zip]" download>Download zip of Video 4</a></li>
+    <li><a href="[Video_20.zip]" download>Download zip of Video 20</a></li>
+    <li><a href="[Video_12.zip]" download>Download zip of Video 12</a></li>
+    <li><a href="[Video_1.zip]" download>Download zip of Video 1</a></li>
+    <li><a href="[Video_16.zip]" download>Download zip of Video 16</a></li>
+    <li><a href="[Video_3.zip]" download>Download zip of Video 3</a></li>
+    <li><a href="[Video_9.zip]" download>Download zip of Video 9</a></li>
+    <li><a href="[Video_14.zip]" download>Download zip of Video 14</a></li>
 </ul>
