--- a/tests/fixtures/html/01911-v1-poa-section-supplementary-material.html
+++ b/tests/fixtures/html/01911-v1-poa-section-supplementary-material.html
@@ -1,3 +1,3 @@
 <ul class="supplementary-material">
-    <li><a href="[elife-01911-supp-v1.zip]">Download zip</a><p>Any figures and tables for this article are included in the PDF. The zip folder contains additional supplemental files.</p></li>
+    <li><a href="[elife-01911-supp-v1.zip]" download>Download zip</a><p>Any figures and tables for this article are included in the PDF. The zip folder contains additional supplemental files.</p></li>
 </ul>
