Modify output of equal contribution statement in author info section/tab

--- a/tests/fixtures/html/00731-v1-vor-section-author-info-equal-contrib.html
+++ b/tests/fixtures/html/00731-v1-vor-section-author-info-equal-contrib.html
@@ -1,1 +1,1 @@
-<section class="equal-contrib"><h4 class="equal-contrib-label">These authors contributed equally to this work</h4><ul class="equal-contrib-list"><li>Kentaro Yoshida</li><li>Verena J Schuenemann</li></ul></section>
+<section class="equal-contrib">These authors contributed equally to this work: <ul class="equal-contrib-list"><li class="equal-contributor">Kentaro Yoshida</li><li class="equal-contributor">Verena J Schuenemann</li></ul></section>
