Update article xml

--- a/tests/fixtures/html/00288-v1-vor-eLife.00288.034-doi-media.html
+++ b/tests/fixtures/html/00288-v1-vor-eLife.00288.034-doi-media.html
@@ -1,9 +1,9 @@
-<div class="media video-content" id="video8">
+<div class="media video-content" id="media8">
 	<div class="media-inline video-inline">
 		<div class="elife-inline-video">
-			[video-video8-inline]
+			[video-media8-inline]
 			<div class="elife-video-links"><span class="elife-video-link elife-video-link-download">
-				<a href="[video-video8-download]" download>Download Video</a></span>
+				<a href="[video-media8-download]" download>Download Video</a></span>
 			</div>
 		</div>
 	</div>
