--- a/tests/fixtures/html/00288-v1-vor-s2-6-id-subsection.html
+++ b/tests/fixtures/html/00288-v1-vor-s2-6-id-subsection.html
@@ -1,12 +1,12 @@
 <h4>Frequent heterogeneous episodes with extremely rapid expansion, rapid decay, and multiple peaks</h4>
 <p>The model was next evaluated for its ability to predict other key features of genital shedding identified in Cohorts A–D. To explore the dynamics of simulated episodes with higher granularity, we varied sampling frequency of model output to include continuous sampling. The model predicted the empirically derived finding that daily sampling substantially underestimates expansion (<a class="xref-fig" href="#fig4s1">Figure 4—figure supplement 1A</a>) and clearance slopes (<a class="xref-fig" href="#fig4s1">Figure 4—figure supplement 1B</a>). Among 842 simulated episodes with sampling every 0.001 days, median initiation to peak expansion rate was 25.5 log<sub>10</sub> HSV DNA copies per day (versus 20.3 log<sub>10</sub> copies per day with 6-hr sampling in Cohort C), implying that during the early expansion phase, HSV DNA levels increased 10-fold every 57 min and doubled every 17 min. There was also rapid late clearance (−7.4 log<sub>10</sub> copies per day vs −8.7 log<sub>10</sub> copies per day in Cohort C).</p>
-<p>We simulated the model until 100 episodes with &gt;10,000 total infected cells within one ulcer were generated. Number of infected cells and viral load peaked at a median of 13.5 hr, predicting the finding from Cohort C that transition from expansion to clearance occurs ∼12 hr after episode commencement. To explain episodes of &gt;4 days, the model predicted multiple peaks within single episodes. In addition, prolonged simulated episodes had wide concurrent dispersal of virus (<a class="xref-other" href="#video1">Video 1</a>).</p>
-<div class="media video-content" id="video1">
+<p>We simulated the model until 100 episodes with &gt;10,000 total infected cells within one ulcer were generated. Number of infected cells and viral load peaked at a median of 13.5 hr, predicting the finding from Cohort C that transition from expansion to clearance occurs ∼12 hr after episode commencement. To explain episodes of &gt;4 days, the model predicted multiple peaks within single episodes. In addition, prolonged simulated episodes had wide concurrent dispersal of virus (<a class="xref-other" href="#media1">Video 1</a>).</p>
+<div class="media video-content" id="media1">
     <div class="media-inline video-inline">
         <div class="elife-inline-video">
-            [video-video1-inline]
+            [video-media1-inline]
             <div class="elife-video-links">
-                <span class="elife-video-link elife-video-link-download"><a href="[video-video1-download]" download>Download Video</a></span>
+                <span class="elife-video-link elife-video-link-download"><a href="[video-media1-download]" download>Download Video</a></span>
             </div>
         </div>
     </div>
