Use doi rather than volume and elocation id in cite as string for POA

--- a/tests/fixtures/html/01911-v1-poa-section-article-info-identification.html
+++ b/tests/fixtures/html/01911-v1-poa-section-article-info-identification.html
@@ -2,5 +2,5 @@
     <h4 class="info-label">DOI</h4> <div class="info-content"><a href="/lookup/doi/10.7554/eLife.01911">10.7554/eLife.01911</a></div>
 </div>
 <div class="elife-article-info-citeas">
-    <h4 class="info-label">Cite this as</h4> <div class="info-content">eLife 2014;3:e01911</div>
+    <h4 class="info-label">Cite this as</h4> <div class="info-content">eLife 2014;10.7554/eLife.01911</div>
 </div>
