Get rid of attempt to add first-child class to p element

--- a/tests/fixtures/html/00288-v1-vor-s2-6-id-subsection.html
+++ b/tests/fixtures/html/00288-v1-vor-s2-6-id-subsection.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="media-caption"><span class="media-label">Video 1.</span> <span class="caption-title">Spatiotemporal demonstration of a 10-day episode.</span>
-        <p class="first-child">The left panel represents total cell-free HSV DNA copies per milliliter present over time. The right panel represents spatial spread of virus during the episode, each hexagon contains one region of shedding and virus spreads to contiguous regions. Amount of virus within a single region is displayed according to a heat map adjacent to the spatial map.</p>
+        <p>The left panel represents total cell-free HSV DNA copies per milliliter present over time. The right panel represents spatial spread of virus during the episode, each hexagon contains one region of shedding and virus spreads to contiguous regions. Amount of virus within a single region is displayed according to a heat map adjacent to the spatial map.</p>
         <p><strong>DOI:</strong> <a href="/lookup/doi/10.7554/eLife.00288.025">http://dx.doi.org/10.7554/eLife.00288.025</a></p>
     </div>
 </div>
