Fix decision letter for kitchen sink and add sub-dois

--- a/tests/fixtures/html/00666-v1-vor-section-abstract.html
+++ b/tests/fixtures/html/00666-v1-vor-section-abstract.html
@@ -1,14 +1,15 @@
 <!-- UPDATE: DOI prefix removed from XML but must be added for display-->                
                 
-                <p>This is the abstract. This article will describe the eLife article and the process.
-                    An abstract can contain any formatting, such as <em>italics</em>,
-                        <strong>bold</strong>, <sup>superscript</sup>, <sub>subscript</sub> or <sc>small caps</sc>. MathML is
-                    also allowed: 
-                    <span class="inline-formula"><span class="mathjax mml-math"><math xmlns="http://www.w3.org/1998/Math/MathML"><mrow><munder><mo></mo><mi>m</mi></munder><mrow><msub><mover accent="true"><mi>p</mi><mo></mo></mover><mi>m</mi></msub><mo>=</mo><mn>0</mn></mrow></mrow></math></span>
-                        </span>
-                .</p>
-                <p>eLife does not structure abstracts into sub headings expect in a clinical trial article, but the abstract can have
-                    multiple paragarahs. The sub DOI is always .001 as it is the first asset in any
-                    article. I have added an unmatched &gt; bracket as this has been an issue for PubMed deposits in the past.</p>
-                <p>If this was a clinical trial the clinical trial details would be listed at the end of the abstract:</p>
-                <p>Clinical trial Registration: EudraCT2004-000446-20.</p>
+<p>This is the abstract. This article will describe the eLife article and the process.
+    An abstract can contain any formatting, such as <em>italics</em>,
+        <strong>bold</strong>, <sup>superscript</sup>, <sub>subscript</sub> or <sc>small caps</sc>. MathML is
+    also allowed:
+    <span class="inline-formula"><span class="mathjax mml-math"><math xmlns="http://www.w3.org/1998/Math/MathML"><mrow><munder><mo></mo><mi>m</mi></munder><mrow><msub><mover accent="true"><mi>p</mi><mo></mo></mover><mi>m</mi></msub><mo>=</mo><mn>0</mn></mrow></mrow></math></span>
+        </span>
+ .</p>
+<p>eLife does not structure abstracts into sub headings expect in a clinical trial article, but the abstract can have
+    multiple paragarahs. The sub DOI is always .001 as it is the first asset in any
+    article. I have added an unmatched &gt; bracket as this has been an issue for PubMed deposits in the past.</p>
+<p>If this was a clinical trial the clinical trial details would be listed at the end of the abstract:</p>
+<p>Clinical trial Registration: EudraCT2004-000446-20.</p>
+<p><strong>DOI:</strong> <a href="/lookup/doi/10.7554/eLife.00666.001">http://dx.doi.org/10.7554/eLife.00666.001</a></p>
